# svgwriter-mcp

./: .gitignore  CLAUDE.md  README.md  example.py  pyproject.toml  server.py
tests/: test_server.py
