[project]
name = "svgwriter-mcp"
version = "0.1.0"
description = "MCP server exposing svgwrite tools for LLM agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "svgwrite>=1.4.3",
    "mcp[cli]>=1.0.0",
    "cairosvg>=2.7.0",
]

[project.scripts]
svgwriter-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
